Added sass folder

--- a/sass/main.css
+++ b/sass/main.css
@@ -420,11 +420,11 @@ body {
   display: flex;
   margin-bottom: 2rem;
 }
-.footer-about__list {
+.footer-about__lists {
   list-style: none;
   margin-right: 14rem;
 }
-.footer-about__list li {
+.footer-about__lists li {
   margin-bottom: 1rem;
 }
 .footer-about__list:nth-child(3) {
